# deck

./: Cargo.toml
src/: cli.rs  config.rs
